unpackaged/main/default/objects/EGandLMFSpend__c/EGandLMFSpend__c.object-meta.xml
<CustomObject>
    <description>Individual EG and LMF Budget and Spend tied to a EG / LMF Territory Budget.</description>
    <label>EG and LMF Spend</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EG and LMF Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>