unpackaged/main/default/objects/EGandLMFSpend__c/fields/ActualSpend__c.field-meta.xml
<CustomField>
    <fullName>ActualSpend__c</fullName>
    <label>Actual Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>