unpackaged/main/default/objects/EGandLMFSpend__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tags__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>EG and LMF Spend</relationshipLabel>
    <relationshipName>EG_and_LMF_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>