unpackaged/main/default/objects/EGandLMFSpend__c/fields/BrandQuality__c.field-meta.xml
<CustomField>
    <fullName>BrandQuality__c</fullName>
    <inlineHelpText>Free text field.</inlineHelpText>
    <label>Brand Quality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>