unpackaged/main/default/objects/EGandLMFSpend__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <inlineHelpText>Type of budget.</inlineHelpText>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Events / Sponsorships</fullName>
            </value>
            <value>
                <fullName>Free Goods</fullName>
            </value>
            <value>
                <fullName>Local Materials / POS</fullName>
            </value>
            <value>
                <fullName>Margin Enhancement</fullName>
            </value>
            <value>
                <fullName>Menu Printing</fullName>
            </value>
            <value>
                <fullName>Misc (undefined)</fullName>
            </value>
            <value>
                <fullName>Price Support</fullName>
            </value>
            <value>
                <fullName>Sales Incentives</fullName>
            </value>
            <value>
                <fullName>Sales Programs</fullName>
            </value>
            <value>
                <fullName>Sales Samples</fullName>
            </value>
            <value>
                <fullName>Sampling / Tasting</fullName>
            </value>
            <value>
                <fullName>SKI Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>