unpackaged/main/default/objects/EGandLMFSpend__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>ParentEGorLMF__r.Distributor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>