unpackaged/main/default/objects/EGandLMFSpend__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>ParentEGorLMF__r.Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>