unpackaged/main/default/objects/EGandLMFSpend__c/recordTypes/EG_DASpend.recordType-meta.xml
<RecordType>
    <fullName>EG_DASpend</fullName>
    <active>true</active>
    <description>EG / DA Spend.</description>
    <label>EG / DA Spend</label>
</RecordType>